# os2mo-rollekatalog

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init.config.yml  pyproject.toml  queries.graphql  schema.graphql
.reuse/: dep5
dev-environment/: devtool
dev-environment/rollekatalog/cert/: keystore.pfx
dev-environment/simplesaml/: authsources.php  saml20-idp-hosted.php
dev-environment/simplesaml/cert/: idp.crt  idp.pem
os2mo_rollekatalog/: api.py  app.py  config.py  depends.py  events.py  junkyard.py  models.py  orgunit.py  person.py  rollekatalog.py  titles.py
os2mo_rollekatalog/autogenerated_graphql_client/: __init__.py  _testing__create_employee.py  _testing__create_engagement.py  _testing__create_it_system.py  _testing__create_it_user.py  _testing__create_org_unit.py  _testing__create_org_unit_root.py  _testing__create_org_unit_type.py  _testing__get_engagement_type.py  _testing__get_job_function.py  _testing__get_mit_i_d.py  _testing__get_org_unit_type.py  _testing__get_org_unit_type_facet_u_u_i_d.py  _testing__job_function.py  _testing__move_org_unit.py  _testing__move_org_unit_to_root.py  _testing__rename_org_unit.py  _testing__update_it_user.py  _testing__update_it_user_engagements.py  _testing__update_it_user_external_id.py  async_base_client.py  base_model.py  client.py  enums.py  exceptions.py  get_org_unit.py  get_org_unit_uuid_for_kle.py  get_org_unit_uuid_for_manager.py  get_person.py  get_person_uuid_for_address.py  get_person_uuid_for_engagement.py  get_person_uuid_for_it_user.py  get_titles.py  get_uuids_for_it_user.py  get_version.py  input_types.py  my_query.py  refresh_all.py  scalars.py
tests/integration/: conftest.py  test_duplicate_user.py  test_multiple_ad.py  test_nothing.py  test_something.py
